# AttentionDB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TRP.md  master_comparator_results.json
.github/workflows/: ci.yml
api/: Cargo.toml  build.rs
api/proto/: attentiondb.proto
api/src/: admin.rs  auth.rs  client.rs  error.rs  lib.rs  observability.rs  openapi.rs  openapi_spec.json  rate_limiter.rs  rest.rs  server.rs  swagger_ui.html  tls.rs  validation.rs
api/tests/: api_test.rs
attentiondb-bench/: Cargo.toml  build.rs
attentiondb-bench/config/: ablation.toml  default.toml  full.toml  quick.toml  smoke.toml
attentiondb-bench/datasets/: README.md  download.sh
attentiondb-bench/docker/: docker-compose.yml
attentiondb-bench/results/quick/: config.toml
attentiondb-bench/results/smoke/: 20260618_123726_raw.json  20260618_124142_results.csv  20260618_124142_scale_1000_table.tex  20260618_125049_aggregated.json  20260618_125049_raw.json  checkpoint.json  config.toml
attentiondb-bench/results/smoke2/: 20260618_130239_aggregated.json  20260618_130239_hardware.json  20260618_130239_raw.json  20260618_130239_results.csv  20260618_131449_aggregated.json  20260618_131449_raw.json  20260618_131449_scale_1000_table.tex  checkpoint.json  config.toml
attentiondb-bench/src/: lib.rs  main.rs
attentiondb-bench/src/adapters/: attentiondb_cpu.rs  attentiondb_gpu.rs  elasticsearch.rs  mod.rs  pgvector.rs  qdrant.rs  translation.rs
attentiondb-bench/src/config/: mod.rs  parser.rs  types.rs  validation.rs
attentiondb-bench/src/executor/: checkpoint.rs  isolation.rs  mod.rs  network_overhead.rs  orchestrator.rs  server_manager.rs  warmup.rs
attentiondb-bench/src/metrics/: attentiondb_specific.rs  energy.rs  latency.rs  mod.rs  pareto.rs  quality.rs  resource.rs  throughput.rs
attentiondb-bench/src/reporting/: ann_benchmark_report.rs  csv_output.rs  json_output.rs  latex_output.rs  mod.rs  pareto_plot.rs  table_renderer.rs
attentiondb-bench/src/stats/: aggregator.rs  bootstrap.rs  confidence.rs  hubness.rs  hypothesis.rs  lid.rs  mod.rs  power.rs
attentiondb-bench/src/workload/: dataset_loader.rs  difficulty.rs  failure_modes.rs  generator.rs  ground_truth.rs  mod.rs
core/: Cargo.toml
core/src/: bm25.rs  collection.rs  constants.rs  engine.rs  error.rs  lib.rs  transaction.rs
design/gpu/: phase1-report.md
distributed/: Cargo.toml  deployment.yaml
distributed/benches/: distributed_bench.rs
distributed/src/: chaos.rs  error.rs  lib.rs  main.rs  operator.rs  raft.rs  replica.rs  shard.rs  transport.rs
distributed/tests/: distributed_test.rs
examples/: comprehensive_demo.rs  demo.rs  master_research_lab_benchmark.rs
hnsw/: Cargo.toml  README.md  recall_results.json
hnsw/benches/: RECALL_BENCHMARK_GUIDE.md  gpu_rerank_bench.rs  hnsw_bench.rs  projection_bench.rs  recall_bench.rs
hnsw/examples/: end_to_end_demo.rs
hnsw/src/: error.rs  head_index.rs  hnsw_index.rs  lib.rs  main.rs  settings.rs
hnsw/src/gpu/: backend.rs  cpu.rs  cuda.rs  error.rs  mod.rs
hnsw/src/persistence/: async_compaction.rs  async_persistence.rs  backup.rs  compaction.rs  error.rs  graph_persistence.rs  index_persistence.rs  mod.rs  remote_backup.rs  strategy.rs  trait.rs
hnsw/tests/: advanced_persistence_test.rs  async_remote_persistence_test.rs  hnsw_test.rs  persistence_progress_test.rs
learned/: Cargo.toml
learned/benches/: training_bench.rs
learned/src/: contrastive.rs  error.rs  lib.rs  main.rs  projection.rs  reprojection.rs  trainer.rs
learned/tests/: learned_test.rs
multihead/: Cargo.toml
multihead/benches/: fusion_bench.rs
multihead/src/: error.rs  fusion.rs  gating.rs  head.rs  lib.rs  main.rs  manager.rs
multihead/tests/: multihead_test.rs
query/: Cargo.toml
query/benches/: query_bench.rs
query/src/: aql.pest  error.rs  executor.rs  lib.rs  main.rs  parser.rs  planner.rs
query/tests/: query_test.rs
sdk/python/: README.md  pyproject.toml
sdk/python/attentiondb/: __init__.py  client.py
storage/: CHANGELOG.md  Cargo.toml  Makefile  README.md
storage/examples/: basic_usage.rs
storage/src/: compaction.rs  document_store.rs  error.rs  lib.rs  main.rs  projection_store.rs  record.rs  sstable.rs  wal.rs
storage/tests/: sstable_test.rs  storage_test.rs
