[package]
name = "attentiondb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = "0.11"
prost = "0.12"
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = { workspace = true }
uuid = { workspace = true }
attentiondb-hnsw = { path = "../hnsw" }
attentiondb-core = { path = "../core" }
attentiondb-storage = { path = "../storage" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "attentiondb-server"
path = "src/bin/server.rs"
