[package]
name = "attentiondb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = "0.11"
prost = "0.12"
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "limit"] }
tower = { version = "0.4", features = ["util", "buffer"] }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sha2 = "0.10"
hex = "0.4"
atty = "0.2"
subtle = "2.4"
hyper = "0.14"
attentiondb-hnsw = { path = "../hnsw" }
attentiondb-core = { path = "../core" }
attentiondb-storage = { path = "../storage" }
axum-server = "0.7"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "attentiondb-server"
path = "src/bin/server.rs"
