[package]
name = "attentiondb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "limit", "request-id", "trace"] }
tower = { version = "0.4", features = ["util", "buffer", "limit"] }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sha2 = "0.10"
hex = "0.4"
http = "1.0"
atty = "0.2"
rcgen = "0.13"
subtle = "2.4"
attentiondb-hnsw = { path = "../hnsw" }
attentiondb-core = { path = "../core" }
attentiondb-storage = { path = "../storage" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "attentiondb-server"
path = "src/bin/server.rs"
