[package]
name = "attentiondb-distributed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
k8s = ["kube", "k8s-openapi"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = { workspace = true }
tracing = "0.1"
k8s-openapi = { version = "0.23", features = ["v1_31"], optional = true }
kube = { version = "0.98", features = ["runtime", "derive"], optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "distributed_bench"
harness = false