[package]
name = "attentiondb-hnsw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hnsw_rs = "0.3"
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
byteorder = "1.5"
chrono = { workspace = true }
cudarc = { version = "0.12", optional = true, default-features = false }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
criterion = { workspace = true }
approx = "0.5"
clap = { version = "4", features = ["derive"] }

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "recall_bench"
harness = false

[[bench]]
name = "gpu_rerank_bench"
harness = false

[features]
default = []
cuda = ["cudarc", "cudarc/cuda-version-from-build-system"]
