[package]
name = "attentiondb-multihead"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ndarray = "0.15"
rayon = { workspace = true }
attentiondb-hnsw = { path = "../hnsw" }

[features]
default = []
gpu = ["attentiondb-hnsw/cuda"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "fusion_bench"
harness = false
