[package]
name = "attentiondb-multihead"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ndarray = "0.15"
rayon = { workspace = true }
attentiondb-hnsw = { path = "../hnsw" }
tracing = "0.1"
bincode = "1.3"

[features]
default = []
gpu = ["attentiondb-hnsw/cuda"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "fusion_bench"
harness = false
