[package]
name = "attentiondb-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
attentiondb-hnsw = { path = "../hnsw" }
attentiondb-multihead = { path = "../multihead" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_bench"
harness = false
