[package]
name = "attentiondb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
crc32fast = "1.3"
rand = { workspace = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
cli = ["clap"]

[[bin]]
name = "attentiondb"
path = "src/bin/attentiondb.rs"
required-features = ["cli"]
